--- a/memory game.html
+++ b/memory game.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="tictactoe.css">
-</head>
-<body>
-
-  <div class="select-box">
-  <header>Tic Tac Toe</header>
-  <div class="content">
-  <div class="title">select which you want to be?</div>
-  <div class="option">
-    <button class="playerX">player(X) </button>
-    <button class="playerY">player (Y)</button>
-  </div>
-  </div>
-</div>
-
-<script src="tictactoe.js"></script>
-  
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Memory Card Game</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <h1>Memory Cards</h1>
+    <div class="grid-container"> 
+    </div>
+    <p>Score: <span class="score"></span></p>
+    <div class="actions">
+        <button onclick="restart()">Restart</button>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
